src/objects/DataServiceDefinition__c.object
<CustomObject>
    <description>Provides the definition of a service including submissions and usage examples.</description>
    <fields>
        <fullName>DataInformation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The information definition that this service is related.</description>
        <inlineHelpText>The information definition that this service is related.</inlineHelpText>
        <label>Data Information</label>
        <referenceTo>DataInformation__c</referenceTo>
        <relationshipLabel>Service Definitions</relationshipLabel>
        <relationshipName>DataServiceDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The data source that this service fronts.</description>
        <inlineHelpText>The data source that this service fronts.</inlineHelpText>
        <label>Data Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Service Definitions</relationshipLabel>
        <relationshipName>DataServiceDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProductionEndpoint__c</fullName>
        <description>The production submission endpoint.</description>
        <inlineHelpText>The production submission endpoint.</inlineHelpText>
        <label>Production Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RemoteWSDL__c</fullName>
        <description>The WSDL for the service at its remote source. This can also be attached to this record entry when applicable.</description>
        <inlineHelpText>The WSDL for the service at its remote source. This can also be attached to this record entry when applicable.</inlineHelpText>
        <label>Remote WSDL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOAPVersion__c</fullName>
        <description>The version of SOAP used for this service.</description>
        <inlineHelpText>The version of SOAP used for this service.</inlineHelpText>
        <label>SOAP Version</label>
        <picklist>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <description>A secured service performs both authentication and encryption of the communication. Common encryption would be the HTTPS protocol being used to access the service.</description>
        <inlineHelpText>A secured service performs both authentication and encryption of the communication. Common encryption would be the HTTPS protocol being used to access the service.</inlineHelpText>
        <label>Security</label>
        <picklist>
            <picklistValues>
                <fullName>HTTPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OAuth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTTP Header Authorization Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpenSSO Token</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WS-Security</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Data Service Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Service Definitions</pluralLabel>
    <recordTypes>
        <fullName>REST</fullName>
        <active>true</active>
        <label>REST</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOAP</fullName>
        <active>true</active>
        <label>SOAP</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>